<resources>
    <string name="app_name">Driver\'s app</string>

    <!-- Strings related to login activity -->
    <string name="prompt_email">User or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log into account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to main activity -->
    <string name="title_activity_main">Main page</string>
    <string name="tab_text_1">USER</string>
    <string name="tab_text_2">NAVIGATION</string>
    <string name="tab_text_3">SETTINGS</string>

    <string name="hello_blank_fragment">This is the main tab</string>
    <string name="name_label">Test</string>
    <string name="card_name_hint" />
    <string name="account_information">Account information</string>

    <string name="status_idle">Status: IDLE</string>
    <string name="status_waiting">Status: WAITING FOR LOAD</string>
    <string name="status_transit">Status: TRANSIT</string>
    <string name="status_problems">Status: HAVING PROBLEMS</string>
    <string name="working_at">Working at:</string>
    <string name="surname">Second name:</string>
    <string name="name">First name:</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="products_to_deliver">Products to deliver:</string>
    <string name="delivery_due">Delivery due:</string>
    <string name="delivery_started">Delivery started:</string>
</resources>