<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grandient1">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="60dp"
        android:paddingTop="30dp"
        android:paddingEnd="0dp"
        android:paddingBottom="20dp"
        android:text="@string/account_information"
        android:textColor="@android:color/white"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/firstNameTW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="2dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/secondNameTW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="2dp"
        android:text="@string/surname"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/WorkingAtTW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="2dp"
        android:text="@string/working_at"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/statusTW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="60dp"
        android:paddingTop="30dp"
        android:paddingEnd="0dp"
        android:paddingBottom="20dp"
        android:text="@string/status_waiting"
        android:textColor="@android:color/white"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deliverTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="2dp"
        android:text="@string/deliver_to"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/deliveryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="2dp"
        android:text="@string/delivery_started"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/deliveryDue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="2dp"
        android:text="@string/delivery_due"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp"
        android:paddingTop="2dp"
        android:paddingEnd="0dp"
        android:paddingBottom="2dp"
        android:text="@string/products_to_deliver"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


</LinearLayout>